<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class KategoriLayanan extends Model
{
    use HasFactory;

    protected $table = 'kategori_layanan';
    protected $primaryKey = 'id_kategori_layanan';

    protected $fillable = [
        'slug',
        'name',
        'subtitle',
        'description',
        'icon_id',
    ];

    public function layanan()
    {
        return $this->hasMany(Layanan::class, 'id_kategori_layanan', 'id_kategori_layanan');
    }
}
